--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-form-builder",
   "version": "0.0.6",
   "description": "AngularJS - Material Design - Form Builder",
-  "main": "src/mdFormBuilder.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
