--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "url": "https://github.com/jembi/md-form-builder/issues"
   },
   "homepage": "https://github.com/jembi/md-form-builder#readme",
-  "peerDependencies": {
-    "angular": "^1.5.0",
+  "dependencies": {
     "angular-animate": "^1.5.0",
     "angular-sanitize": "^1.5.0",
     "angular-touch": "^1.5.0",
@@ -34,5 +33,8 @@
     "v-accordion": "^1.6.0",
     "mdPickers": "^0.7.5",
     "webcam": "webcam-directive#^3.1.1"
+  },
+  "peerDependencies": {
+    "angular": "^1.5.0"
   }
 }
