--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "browserify": {
     "transform": [
-      [ "ngify", { "moduleName": "mdFormBuilderApplication" } ],
+      [
+        "ngify",
+        {
+          "moduleName": "mdFormBuilderApplication"
+        }
+      ],
       "browserify-css"
     ]
   },
@@ -29,19 +34,6 @@
     "url": "https://github.com/jembi/md-form-builder/issues"
   },
   "homepage": "https://github.com/jembi/md-form-builder#readme",
-  "dependencies": {
-    "angular-animate": "^1.5.0",
-    "angular-sanitize": "^1.5.0",
-    "angular-touch": "^1.5.0",
-    "angular-material": "^1.0.6",
-    "angular-messages": "^1.5.2",
-    "moment": "~2.11.1",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
-    "angular-notification-icons": "^0.4.3",
-    "v-accordion": "^1.6.0",
-    "mdPickers": "^0.7.5",
-    "webcam": "webcam-directive#^3.1.1"
-  },
   "peerDependencies": {
     "angular": "^1.5.0"
   },
@@ -49,5 +41,19 @@
     "browserify": "^13.1.1",
     "browserify-css": "^0.9.2",
     "ngify": "^1.6.2"
+  },
+  "dependencies": {
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-hotkeys": "^1.7.0",
+    "angular-material": "^1.1.1",
+    "angular-messages": "^1.5.8",
+    "angular-notification-icons": "^0.4.4",
+    "angular-sanitize": "^1.5.8",
+    "angular-touch": "^1.5.8",
+    "mdPickers": "^0.7.5",
+    "moment": "^2.15.2",
+    "v-accordion": "^1.6.0",
+    "webcam": "^3.1.1"
   }
 }
