--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify --entry src/index.js --outfile dist/bundle.js",
+    "build": "./node_modules/browserify/bin/cmd.js --entry src/index.js --outfile dist/bundle.js",
     "publish": "npm run build && npm pulish"
   },
   "repository": {
@@ -38,6 +38,7 @@
     "angular": "^1.5.0"
   },
   "devDependencies": {
+    "angular": "^1.5.8",
     "browserify": "^13.1.1",
     "browserify-css": "^0.9.2",
     "ngify": "^1.6.2"
