--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-form-builder",
-  "version": "0.0.1",
+  "version": "0.0.10",
   "description": "AngularJS - Material Design - Form Builder",
   "main": "index.js",
   "browserify": {
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "browserify --entry src/index.js --outfile dist/bundle.js",
-    "publish": "npm run build && npm pulish"
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
