MSHR-185: Change module name to md-form-builder

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       [
         "ngify",
         {
-          "moduleName": "mdFormBuilderApplication"
+          "moduleName": "md-form-builder"
         }
       ],
       "browserify-css"
