--- a/bower.json
+++ b/bower.json
@@ -37,4 +37,7 @@
     "angular-recaptcha": "^3.0.3",
     "webcam": "webcam-directive#^3.1.1"
   },
+  "resolutions": {
+    "angular": "1.5.8"
+  }
 }
