--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-form-builder",
   "version": "0.1.1",
   "description": "AngularJS - Material Design - Form Builder",
-  "main": "index.js",
+  "main": "src/index.js",
   "browserify": {
     "transform": [
       [
@@ -44,11 +44,8 @@
     "ngify": "^1.6.2"
   },
   "dependencies": {
-    "angular-animate": "^1.5.8",
-    "angular-aria": "^1.5.8",
     "angular-hotkeys": "^1.7.0",
     "angular-material": "^1.1.1",
-    "angular-messages": "^1.5.8",
     "angular-notification-icons": "^0.4.4",
     "angular-sanitize": "^1.5.8",
     "angular-touch": "^1.5.8",
