--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
   "dependencies": {
     "angular-hotkeys": "^1.7.0",
     "angular-material": "^1.1.1",
+    "angular-messages": "^1.5.8",
     "angular-notification-icons": "^0.4.4",
     "angular-sanitize": "^1.5.8",
     "angular-touch": "^1.5.8",
+    "mdPickers": "^0.7.5",
     "moment": "^2.15.2",
     "v-accordion": "^1.6.0",
     "webcam": "^3.1.1"
