--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-form-builder",
   "version": "0.1.1",
   "description": "AngularJS - Material Design - Form Builder",
-  "main": "src/index.js",
+  "main": "dist/bundle.js",
   "browserify": {
     "transform": [
       [
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify --entry src/index.js --outfile dist/bundle.js",
+    "build": "browserify --standalone md-form-builder --entry src/index.js --outfile dist/bundle.js",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -39,20 +39,21 @@
   },
   "devDependencies": {
     "angular": "^1.5.8",
-    "browserify": "^13.1.1",
-    "browserify-css": "^0.9.2",
-    "ngify": "^1.6.2"
-  },
-  "dependencies": {
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
     "angular-hotkeys": "^1.7.0",
     "angular-material": "^1.1.1",
     "angular-messages": "^1.5.8",
     "angular-notification-icons": "^0.4.4",
     "angular-sanitize": "^1.5.8",
     "angular-touch": "^1.5.8",
+    "browserify": "^13.1.1",
+    "browserify-css": "^0.9.2",
     "mdPickers": "^0.7.5",
     "moment": "^2.15.2",
+    "ngify": "^1.6.2",
     "v-accordion": "^1.6.0",
     "webcam": "^3.1.1"
-  }
+  },
+  "dependencies": {}
 }
