--- a/package.json
+++ b/package.json
@@ -34,16 +34,15 @@
     "url": "https://github.com/jembi/md-form-builder/issues"
   },
   "homepage": "https://github.com/jembi/md-form-builder#readme",
-  "peerDependencies": {
-    "angular": "^1.5.0"
-  },
   "devDependencies": {
-    "angular": "^1.5.8",
     "browserify": "^13.1.1",
     "browserify-css": "^0.9.2",
     "ngify": "^1.6.2"
   },
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
     "angular-hotkeys": "^1.7.0",
     "angular-material": "^1.1.1",
     "angular-messages": "^1.5.8",
