--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
   },
   "homepage": "https://github.com/jembi/md-form-builder#readme",
   "devDependencies": {
-    "browserify": "^13.1.1",
-    "browserify-css": "^0.9.2",
-    "ngify": "^1.6.2"
+    "browserify": "^13.1.1"
   },
   "dependencies": {
     "angular": "^1.5.8",
@@ -50,7 +48,9 @@
     "angular-sanitize": "^1.5.8",
     "angular-touch": "^1.5.8",
     "mdPickers": "^0.7.5",
+    "browserify-css": "^0.9.2",
     "moment": "^2.15.2",
+    "ngify": "^1.6.2",
     "v-accordion": "^1.6.0",
     "webcam": "^3.1.1"
   }
