--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "forms"
   ],
   "author": "Martin Brocker <martin@jembi.org> (http://jembi.org)",
-  "license": "MPL-2.0"
+  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/jembi/md-form-builder/issues"
   },
