--- a/package.json
+++ b/package.json
@@ -36,21 +36,21 @@
   "homepage": "https://github.com/jembi/md-form-builder#readme",
   "devDependencies": {
     "browserify": "^13.1.1",
-    "uglify-js": "^2.7.4"
+    "uglify-js": "^2.7.4",
+    "browserify-css": "^0.9.2",
+    "ngify": "^1.6.2"
   },
   "dependencies": {
-    "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
-    "angular-aria": "^1.5.8",
+    "angular": "1.6.x",
+    "angular-animate": "1.6.x",
+    "angular-aria": "1.6.x",
     "angular-hotkeys": "^1.7.0",
-    "angular-material": "^1.1.1",
-    "angular-messages": "^1.5.8",
+    "angular-material": "1.1.x",
+    "angular-messages": "1.6.x",
     "angular-notification-icons": "^0.4.4",
-    "angular-sanitize": "^1.5.8",
-    "angular-touch": "^1.5.8",
-    "browserify-css": "^0.9.2",
+    "angular-sanitize": "1.6.x",
+    "angular-touch": "1.6.x",
     "moment": "^2.15.2",
-    "ngify": "^1.6.2",
     "v-accordion": "^1.6.0",
     "webcam": "^3.1.1"
   }
