--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "scripts": {
+    "dev": "watch 'npm run build' src",
     "test": "npm run -s test:code && npm run -s test:style",
     "test:code": "tap -R nyan --cov test/**/*.js",
     "test:these-files": "tap --reporter=spec",
@@ -22,7 +23,7 @@
     "test:debug": "tap --debug -t 0 test/**/*.js",
     "test:these": "tap -R nyan",
     "lint-fix": "standard --fix",
-    "build": "browserify --entry src/index.js | uglifyjs --output dist/bundle.js",
+    "build": "browserify --entry src/index.js  | uglifyjs --output dist/bundle.js",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -41,12 +42,16 @@
   },
   "homepage": "https://github.com/jembi/md-form-builder#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "htmlhint": "^0.9.13",
+    "sinon": "^3.2.1",
     "snazzy": "^7.0.0",
     "standard": "^10.0.2",
     "tap": "^10.3.2",
-    "uglify-js": "^2.7.4"
+    "uglify-js": "^2.7.4",
+    "watch": "^1.0.2"
   },
   "dependencies": {
     "angular": "^1.5.8",
