--- a/demoland/package.json
+++ b/demoland/package.json
@@ -45,6 +45,7 @@
     "angular-resource": "^1.6.5",
     "angular-route": "^1.6.5",
     "angular-timeline": "^1.7.0",
+    "angular-ui-ace": "^0.2.3",
     "crypto-js": "^3.1.9-1",
     "js-base64": "^2.1.9",
     "moment": "^2.18.1",
